fix social media icon on safari

--- a/frontpage/css/main.css
+++ b/frontpage/css/main.css
@@ -1178,18 +1178,17 @@ footer h4 {
     transition: 0.5s;
 }
 .social:hover {
-    /* transform: translateX(-1em); */
     margin-right: 1em;
 }
 .social:hover img {
-    transform: translateY(-50%) translateX(0);
+    /* transform: translateY(-50%); */
 }
 .social-icon > img {
     opacity: 0;
     height: 1.5em;
     position: absolute;
     top: 50%;
-    transform: translateY(-50%) translateX(2em);
+    transform: translateY(-50%);
     transition: opacity 0.5s, transform 0.5s;
 }
 .social:hover .social-icon > img {
